Change className and CSS styles

--- a/src/assets/styles/SignupForm.css
+++ b/src/assets/styles/SignupForm.css
@@ -1,6 +1,9 @@
 .form-control{
     width: 280px !important;
 }
-.input-form{
-    gap: 30px
+.wrap{
+    margin-bottom: -22px;
+}
+.input-container {
+    height: 320px;
 }
