--- a/src/assets/styles/LoginPage.css
+++ b/src/assets/styles/LoginPage.css
@@ -29,4 +29,17 @@
   .signup-link{
     margin-top: 0px;
   }
-  
+  .message-container {
+    margin-top: -85px; /* Di chuyển lên trên 5px */
+    margin-bottom: 10px; /* Khoảng cách với phần bên dưới */
+    min-height: 20px; /* Đảm bảo có chiều cao tối thiểu */
+    width: 100%;
+    
+}
+
+.message-text {
+    font-size: 25px;
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+}
