--- a/src/assets/styles/MainPage_Sidebar.css
+++ b/src/assets/styles/MainPage_Sidebar.css
@@ -7,6 +7,7 @@
     width: 240px;
     display: flex;
     flex-direction: column;
+    z-index: 9999;
 }
 .logo-container {
     width: 140px;  /* Chiều rộng cố định */
