Nghe nhạc bất cứ tab nào

--- a/src/assets/styles/top100.css
+++ b/src/assets/styles/top100.css
@@ -1,6 +1,5 @@
 .body-container {
-    margin-top: 90px;
-    margin-left: 250px;
+    margin-top: 90px !important;
     height: auto;
 }
 .img_title {
