--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
-html, body {
-    height: 0px;
+html, body, #root{
+    height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
     background-color: black; /* Set nền full đen */
-
 }
 li {
     list-style: none;
