--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -10,6 +10,8 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    z-index: 1;
+    background-color: rgb(27, 37, 45);
 }
 .pic-sub{
     width: 55%;
@@ -24,7 +26,6 @@
 .logo {
     position: fixed;
     inset: 0;
-    z-index: -2;
     width: 100%;
     height: 100%;
     opacity: 0.2;
