--- a/src/assets/styles/MusicPlayer.css
+++ b/src/assets/styles/MusicPlayer.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     margin-left: 10px;
-    flex: 1;
+    width: auto;
 }
 .song-profile > img {
     width: 60px;
@@ -94,4 +94,11 @@
     cursor: pointer;
     box-shadow: -1000px 0 0 1000px white;
   }
-  
+  .song-name {
+    cursor: pointer;
+    font-weight: bold;
+    transition: color, 200ms;
+  }
+  .song-name:hover {
+    color: #a259ff;
+  }
