--- a/src/assets/styles/AdminPage_Sidebar.css
+++ b/src/assets/styles/AdminPage_Sidebar.css
@@ -21,7 +21,6 @@
   } 
   
   .sidebar-menu li {
-    color :aliceblue !important;
     margin-top: 20px;
     display: flex;
     align-items: center;
@@ -38,4 +37,6 @@
     margin-left: 10px;
     font-size: 16px;
   }
-  
+  .element {
+    color: aliceblue;
+  }
