formatAuthorsName với chỉnh lại giao diện playlist và albumcard

--- a/src/assets/styles/Playlist.css
+++ b/src/assets/styles/Playlist.css
@@ -44,7 +44,7 @@
     align-items: center;
     padding: 10px;
     border-radius: 10px;
-    width: fit-content;
+        width: auto !important;
   }
   
   .song-image {
