--- a/src/assets/styles/KaraokePlayer.css
+++ b/src/assets/styles/KaraokePlayer.css
@@ -3,8 +3,8 @@
   padding: 2rem;
   background-color: #1e1e2f;
   color: white;
-  height: 100vh;
-  width: 100%;
+  height: 100%;
+  width: auto;
 }
 .text-center {
     margin-top: 60px;
