--- a/src/assets/styles/MusicSuggest.css
+++ b/src/assets/styles/MusicSuggest.css
@@ -5,3 +5,40 @@
 .music-name:hover {
     color: #a259ff ;
 }
+.music-name-text {
+    font-weight: bold;
+    font-size: 14px;
+    transition: color 0.2s ease;
+}
+
+.music-name-text.hoverable-title:hover {
+    color: #b197fc; /* Màu tím khi hover */
+}
+
+.badge {
+    font-size: 0.75rem;
+    font-weight: bold;
+    padding: 2px 8px;
+    border-radius: 5px;
+}
+
+.badge-plus {
+    background-color: #b197fc;
+    color: white;
+}
+
+.badge-premium {
+    background-color: #f1c40f;
+    color: black;
+}
+
+.music-name-with-badge {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.music-age {
+    color: gray;
+    font-size: 0.85rem;
+}
