--- a/src/assets/styles/MainPage_header.css
+++ b/src/assets/styles/MainPage_header.css
@@ -167,9 +167,31 @@ a {
     padding-bottom: 30px !important;
     border-bottom: 1px solid white;
 }
+.interface:hover .interfaceSuggest {
+    display: flex;
+}
 .introduce {
     margin-top: 10px;
 }
-
+.interfaceSuggest {
+    background-color: #34224F;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    display: none;
+    position: absolute;
+    left: -255px;
+    padding: 10px;
+    align-items: center;
+    gap: 20px;
+}
+.interfaceSuggest > p {
+    color: white;
+    font-family: sans-serif;
+    margin: 0;
+}
+.colorPicker {
+    width: 50px;
+    height: 50px;
+}
 /*--------------------------------------------------------------------*/
 
