sửa lỗi và thêm chức năng xóa sửa người dùng

--- a/src/assets/styles/AdminPage_Header.css
+++ b/src/assets/styles/AdminPage_Header.css
@@ -6,7 +6,12 @@
     height: 50px;
     font-family: sans-serif;
     font-size: 18px;
-    position: sticky;
+    position: fixed;    
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+
   }
   .left > p {
     margin: 0;
