--- a/src/assets/styles/AdminPage_Body.css
+++ b/src/assets/styles/AdminPage_Body.css
@@ -4,7 +4,7 @@
   min-height: calc(100vh - 50px);
   background-color: #f5f5f5; /* nền sáng để phân biệt */
   font-family: sans-serif;
-  color: #333;
+  color: #ffffff;
   box-sizing: border-box;
 }
 
