--- a/src/assets/styles/AdminPage_Sidebar.css
+++ b/src/assets/styles/AdminPage_Sidebar.css
@@ -1,14 +1,14 @@
 .sidebar2 {
-    width: 200px;
-    background: rgb(40, 3, 53);
-    color: white;
-    box-shadow: 2px 0 10px rgba(0, 0, 0, 0.2);
-    margin-top: 50px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-  }
+  position: fixed;
+  top: 50px; /* dưới header */
+  left: 0;
+  width: 200px;
+  height: calc(100vh - 50px); /* phần còn lại sau header */
+  background: #29003b;
+  z-index: 999;
+  overflow-y: auto;
+}
+
   
   .sidebar-menu {
     list-style: none;
