thêm xóa bài hát trong admin, thêm sửa loại tài khoản user

--- a/src/assets/styles/AdminPage_QLBH.css
+++ b/src/assets/styles/AdminPage_QLBH.css
@@ -66,3 +66,11 @@
 .delete-btn:hover {
   background-color: #c62828;
 }
+.add-btn {
+  background-color: #28a745; /* xanh lá */
+  color: white;
+  padding: 4px 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
