--- a/src/assets/styles/MainPage_Body.css
+++ b/src/assets/styles/MainPage_Body.css
@@ -105,12 +105,6 @@
   opacity: 0.85;
 }
 
-.list-music-suggest-container {
-  margin: 20px 60px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Mặc định 3 cột 1fr 1fr 1fr*/
-  gap: 10px;
-}
 .Chill {
   margin-left: 50px;
   margin-bottom: 20px;
@@ -148,14 +142,7 @@
   border-radius: 10px;
 }
 
-/* Tiêu đề bài hát */
-.music-title-container {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  margin-left: 10px;
-  color: #fff;
-}
+
 
 .music-name {
   font-size: 14px;
@@ -163,69 +150,8 @@
   letter-spacing: 1px;
   margin-bottom: 5px;
 }
-.music-author{
-  font-size: 12px;
-  opacity: 0.8;
-}
-.feature-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  margin-right: 15px;
-  position: relative; /* Đặt position relative cho container */
-}
 
-.more{
-  margin-bottom: 15px;
-  color: #B197FC;
-  font-size: 25px;
-}
-.tooltip {
-  white-space: nowrap;
-  width: max-content;
-  position: absolute;
-  background: rgba(0, 0, 0, 0.8);
-  color: white;
-  padding: 5px 10px;
-  border-radius: 5px;
-  z-index: 10;
-  top: -15px;
-  left: -50px;
-  transform: 'translateX(-50%)';
-  visibility: hidden; /* Ẩn tooltip mặc định */
-  opacity: 0;
-  transition: visibility 0s, opacity 0.3s linear;
-}
-.tt2 {
-  white-space: nowrap;
-  width: max-content;
-  position: absolute;
-  background: rgba(0, 0, 0, 0.8);
-  color: white;
-  padding: 5px 10px;
-  border-radius: 5px;
-  z-index: 10;
-  top: -15px;
-  left: 15px;
-  transform: 'translateX(-50%)';
-  visibility: hidden; /* Ẩn tooltip mặc định */
-  opacity: 0;
-  transition: visibility 0s, opacity 0.3s linear;
-}
-.fa-heart, .more:hover {
-  cursor: pointer;
-}
-.fa-heart:hover + .tooltip {
-  visibility: visible; /* Hiển thị tooltip khi hover */
-  opacity: 1;
-  cursor: pointer;
-}
-.more:hover + .tt2 {
-  visibility: visible; 
-  opacity: 1;
-  cursor: pointer;
-}
+
 /* Khi màn hình nhỏ hơn 1024px, hiển thị 2 cột */
 @media (max-width: 1300px) {
   .list-music-suggest-container {
@@ -415,18 +341,6 @@
   display: flex;
   margin-top: 25px;
 }
-.premium {
-  border: none;
-  border-radius: 5px;
-  background-color: rgb(211, 157, 21);
-  width: 70px;
-  height: 22px;
-  display: flex; /* Căn giữa nội dung */
-  align-items: center;
-  justify-content: center;
-  margin-top: -1px;
-  margin-left: 0px  !important;
-}
 
 .premium > p {
   color: white;
@@ -511,8 +425,11 @@
 
 .music-item {
   display: flex;
+  align-items: center;
   padding: 10px;
-  border-radius: 10px;
+  border-radius: 8px;
+  transition: background-color 0.2s;
+  width: auto;
 }
 .music-item:hover{
   background-color: #7268853e;
@@ -524,27 +441,7 @@
   margin-right: 10px;
   align-items: center;
 }
-.music-info{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  margin-top: 2px;
-  line-height: 19px;
-}
-.music-info h3 {
-  display: flex;
-  gap: 10px;
-  font-size: 14px;
-  font-weight: bold;
-  color: white;
-  margin: 0;
-}
 
-.music-info p {
-  font-size: 12px;
-  color: #b3b3b3;
-  margin: 0;
-}
 
 .premium {
   background-color: #facc15;
@@ -555,6 +452,15 @@
   margin-left: 5px;
   font-weight: bold;
 }
+.premium > p {
+  color: white;
+  font-size: 10px;
+  font-weight: 800;
+  letter-spacing: 1px;
+  padding: 0;
+  margin-top: 15px;
+}
+
 .music-official{
   font-family: Arial, sans-serif;
   color: white;
