--- a/src/assets/styles/MainPage_header.css
+++ b/src/assets/styles/MainPage_header.css
@@ -193,5 +193,35 @@ a {
     width: 50px;
     height: 50px;
 }
+.search-list-container {
+  position: absolute;
+  top: 100%; /*  phần tử sẽ được đặt xuống phía dưới đúng bằng chiều cao của phần tử cha*/
+  left: 0;
+  width: 100%;
+  background: white;
+  border-top: none;
+  z-index: 10;
+  max-height: 200px;
+  overflow-y: auto;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  background-color: #34224F;
+  border-radius: 20px;
+  color: rgb(0, 173, 248);
+    overflow-y: scroll;
+
+  /* Ẩn scrollbar - Chrome, Edge */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+.search-song-detail {
+    font-weight: 450;
+    cursor: pointer;
+}
+.search-song-detail:hover {
+    background-color: rgba(174, 10, 233, 0.666);
+}
 /*--------------------------------------------------------------------*/
 
