--- a/src/assets/styles/MusicSuggest.css
+++ b/src/assets/styles/MusicSuggest.css
@@ -1,3 +1,10 @@
+.list-music-suggest-container {
+  margin: 20px 40px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* Mặc định 3 cột 1fr 1fr 1fr*/
+  gap: 10px;
+}
+
 .music-name {
     cursor: pointer;
     transition: color 0.1s;
@@ -41,4 +48,18 @@
 .music-age {
     color: gray;
     font-size: 0.85rem;
+}
+.music-title-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  color: #fff;
+}
+.music-author{
+  font-size: 12px;
+  opacity: 0.8;
+}
+.music-author >p:hover {
+  color: #a259ff;
 }
