--- a/src/assets/styles/Playlist.css
+++ b/src/assets/styles/Playlist.css
@@ -78,3 +78,54 @@
     margin-left: 5px;
     font-size: 13px;
   }
+  .modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* mờ nền */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background: #2c203f;
+  padding: 20px 30px;
+  border-radius: 12px;
+  color: white;
+  width: 400px;
+  max-height: 80vh;
+  overflow-y: auto;
+  box-shadow: 0 0 15px #000;
+  animation: fadeIn 0.2s ease-in-out;
+}
+
+.modal-content h3 {
+  margin-bottom: 10px;
+  font-size: 20px;
+}
+
+.modal-song-item {
+  padding: 10px;
+  border-radius: 8px;
+  background: #3c2c5c;
+  margin-bottom: 10px;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+
+.modal-song-item:hover {
+  background: #5b3f85;
+}
+
+.modal-close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+}
