--- a/src/assets/styles/MainPage_header.css
+++ b/src/assets/styles/MainPage_header.css
@@ -12,21 +12,7 @@
 a {
     text-decoration: none !important;
 }
-.left-section {
-    flex: 0.5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.left-section > a {
-    color: rgb(255, 253, 253);
-}
-.fa-arrow-left{
-    margin-right: 25px;
-}
-.fa-arrow-right{
-    margin-right: -25px;
-}
+
 .mid-section {
     flex: 2;
     display: flex;
@@ -34,6 +20,7 @@ a {
     align-items: center;
     margin-right: 60px;
     position: relative;
+    margin-left: 20px;
 }
 .search-button {
     background-color: none;
@@ -111,7 +98,7 @@ a {
     position: absolute;
     border: none;
     width: 300px;
-    height: 400px;
+    height: 200px;
     right: 100px;
     top: 50px;
     display: none;
